# pyBLM

./: README.md
pyBLM/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
pyBLM/examples/: example_basic.ipynb  example_basic.py  test_rda.ipynb
pyBLM/iblm/: __init__.py  data.py  explanation.py  models.py  predict.py  preprocessing.py  training.py  utils.py  visualization.py
pyBLM/tests/: test_iblm.py
reference_R/: .Rbuildignore  DESCRIPTION  IBLM.Rproj  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  cran-comments.md
reference_R/R/: beta_correction_plot_functions.R  check_data.R  check_iblm_model.R  correction_corridor.R  create_beta_correction_plot_functions.R  data_beta_coeff_functions.R  detect_outliers.R  drop_xgb_data_params.R  explain_iblm.R  extract_booster_shap.R  freMTPLmini.R  get_pinball_scores.R  load_freMTPL2freq.R  predict.R  split_into_train_validate_test.R  theme_iblm.R  train_iblm_xgb.R  train_xgb_as_per_iblm.R  utility.R
reference_R/data/: freMTPLmini.rda
reference_R/data-raw/: freMTPLmini.R
reference_R/man/: beta_corrected_density.Rd  beta_corrected_scatter.Rd  beta_corrections_derive.Rd  bias_density.Rd  check_data_variability.Rd  check_iblm_model.Rd  correction_corridor.Rd  create_beta_corrected_density.Rd  create_beta_corrected_scatter.Rd  create_bias_density.Rd  create_overall_correction.Rd  data_beta_coeff_booster.Rd  data_beta_coeff_glm.Rd  data_to_onehot.Rd  explain_iblm.Rd  extract_booster_shap.Rd  freMTPLmini.Rd  get_pinball_scores.Rd  load_freMTPL2freq.Rd  overall_correction.Rd  predict.iblm.Rd  shap_to_onehot.Rd  split_into_train_validate_test.Rd  theme_iblm.Rd  train_iblm_xgb.Rd  train_xgb_as_per_iblm.Rd
reference_R/revdep/: README.md
reference_R/tests/: testthat.R
reference_R/tests/testthat/: test-check_data_variability.R  test-explain_iblm.R  test-get_pinball_scores.R  test-predict.R  test-train_iblm.R
reference_R/vignettes/: IBLM.Rmd
