# Configuration file for building and publishing pyBLM
# This file allows pip and other tools to discover and build the package

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyBLM"
dynamic = ["version"]
description = "Interpretable Boosted Linear Models - Combining GLMs with XGBoost for Interpretability"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Zhuowen Zhou", email = "zhou.zhuowen@hotmail.com"}
]
keywords = ["machine-learning", "interpretability", "glm", "xgboost", "shap", "actuarial", "insurance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "xgboost>=1.5.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "shap>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "black>=21.7b0",
    "flake8>=3.9.2",
    "tox>=3.24.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/your-username/pyBLM/issues"
"Documentation" = "https://github.com/your-username/pyBLM#readme"
"Source Code" = "https://github.com/your-username/pyBLM"
"Original R Package" = "https://github.com/IFoA-ADSWP/IBLM"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["iblm"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
